# vibecoder

./: .gitignore  Makefile  README.md  pyproject.toml  setup.sh
src/vibe_coding_test/: __init__.py  cli.py  main.py
src/vibe_coding_test/setup_codespace/: __init__.py  command.py
src/vibecoder/: cli.py
src/vibecoder/setup_codespace/: codespace.py  setup_codespace.py  terminal.py
